// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-professions-libérales > CIPAV Acre 1`] = `
"entreprise . chiffre d'affaires: 6883
impôt . montant: undefined
indépendant . cotisations et contributions: 1883
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 29
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV Acre 2`] = `
"entreprise . chiffre d'affaires: 26847
impôt . montant: undefined
indépendant . cotisations et contributions: 6847
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19438
protection sociale . retraite . base: 146
protection sociale . retraite . complémentaire: 111
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV Acre 3`] = `
"entreprise . chiffre d'affaires: 70283
impôt . montant: undefined
indépendant . cotisations et contributions: 20283
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41382
protection sociale . retraite . base: 347
protection sociale . retraite . complémentaire: 315
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 2`] = `
"entreprise . chiffre d'affaires: 3341
impôt . montant: undefined
indépendant . cotisations et contributions: 1341
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 14
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 3`] = `
"entreprise . chiffre d'affaires: 6883
impôt . montant: undefined
indépendant . cotisations et contributions: 1883
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 29
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 4`] = `
"entreprise . chiffre d'affaires: 13364
impôt . montant: undefined
indépendant . cotisations et contributions: 3364
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
protection sociale . retraite . base: 73
protection sociale . retraite . complémentaire: 55
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 5`] = `
"entreprise . chiffre d'affaires: 148100
impôt . montant: undefined
indépendant . cotisations et contributions: 48100
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73752
protection sociale . retraite . base: 351
protection sociale . retraite . complémentaire: 930
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 6`] = `
"entreprise . chiffre d'affaires: 1282969
impôt . montant: undefined
indépendant . cotisations et contributions: 282969
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528406
protection sociale . retraite . base: 360
protection sociale . retraite . complémentaire: 1770
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 1`] = `
"entreprise . chiffre d'affaires: 86791
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 1`] = `
"entreprise . chiffre d'affaires: 95464
impôt . montant: undefined
indépendant . cotisations et contributions: 35465
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48220
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 515
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 2`] = `
"entreprise . chiffre d'affaires: 97610
impôt . montant: undefined
indépendant . cotisations et contributions: 37610
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48206
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 532
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 3`] = `
"entreprise . chiffre d'affaires: 94680
impôt . montant: undefined
indépendant . cotisations et contributions: 34680
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48225
protection sociale . retraite . base: 516
protection sociale . retraite . complémentaire: 508
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 4`] = `
"entreprise . chiffre d'affaires: 97610
impôt . montant: undefined
indépendant . cotisations et contributions: 37610
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48206
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 532
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 5`] = `
"entreprise . chiffre d'affaires: 94680
impôt . montant: undefined
indépendant . cotisations et contributions: 34680
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48225
protection sociale . retraite . base: 516
protection sociale . retraite . complémentaire: 508
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 6`] = `
"entreprise . chiffre d'affaires: 3034
impôt . montant: undefined
indépendant . cotisations et contributions: 2035
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
protection sociale . retraite . base: 79
protection sociale . retraite . complémentaire: 12
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV exonération incapacité 1`] = `
"entreprise . chiffre d'affaires: 45146
impôt . montant: undefined
indépendant . cotisations et contributions: 5146
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: 34544
protection sociale . retraite . base: 507
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 1`] = `
"entreprise . chiffre d'affaires: 1459
impôt . montant: undefined
indépendant . cotisations et contributions: 959
indépendant . rémunération . nette: 500
indépendant . rémunération . nette . après impôt: 500
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 2
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 2`] = `
"entreprise . chiffre d'affaires: 2091
impôt . montant: undefined
indépendant . cotisations et contributions: 1091
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 7
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 3`] = `
"entreprise . chiffre d'affaires: 2721
impôt . montant: undefined
indépendant . cotisations et contributions: 1221
indépendant . rémunération . nette: 1500
indépendant . rémunération . nette . après impôt: 1500
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 10
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 4`] = `
"entreprise . chiffre d'affaires: 3341
impôt . montant: undefined
indépendant . cotisations et contributions: 1341
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 14
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 5`] = `
"entreprise . chiffre d'affaires: 6883
impôt . montant: undefined
indépendant . cotisations et contributions: 1883
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 29
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 6`] = `
"entreprise . chiffre d'affaires: 13364
impôt . montant: undefined
indépendant . cotisations et contributions: 3364
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
protection sociale . retraite . base: 73
protection sociale . retraite . complémentaire: 55
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 7`] = `
"entreprise . chiffre d'affaires: 148100
impôt . montant: undefined
indépendant . cotisations et contributions: 48100
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73752
protection sociale . retraite . base: 351
protection sociale . retraite . complémentaire: 930
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 8`] = `
"entreprise . chiffre d'affaires: 1282969
impôt . montant: undefined
indépendant . cotisations et contributions: 282969
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528406
protection sociale . retraite . base: 360
protection sociale . retraite . complémentaire: 1770
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 3`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > avocat 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > avocat 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 3`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 4`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 5`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 6`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 3`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;
